add informative print statements

--- a/notebooks/Equiv_test_tabular_data.ipynb
+++ b/notebooks/Equiv_test_tabular_data.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8451abfa",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-22T22:20:47.597957Z",
-     "start_time": "2024-01-22T22:20:45.344189Z"
+     "end_time": "2024-01-23T18:09:06.427055Z",
+     "start_time": "2024-01-23T18:09:03.982697Z"
     }
    },
    "outputs": [],
@@ -34,12 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "9cc34189",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-22T22:35:44.315651Z",
-     "start_time": "2024-01-22T22:35:44.296094Z"
+     "end_time": "2024-01-23T18:15:11.780698Z",
+     "start_time": "2024-01-23T18:15:11.758719Z"
     }
    },
    "outputs": [],
@@ -70,6 +70,7 @@
     "    p2 = stats.t.sf(t2, df)\n",
     "\n",
     "    equiv_pval = np.max([p1, p2])\n",
+    "    print(\"diff pvalue: {}\\nequiv pvalue: {}\".format(diff_pval, equiv_pval))\n",
     "    return diff_pval, equiv_pval\n",
     "\n",
     "def plot_groups(group1_vals, group2_vals):\n",
@@ -86,12 +87,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "068bf11c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-22T22:35:45.506538Z",
-     "start_time": "2024-01-22T22:35:44.618397Z"
+     "end_time": "2024-01-23T18:15:23.567548Z",
+     "start_time": "2024-01-23T18:15:22.740029Z"
     }
    },
    "outputs": [
@@ -99,7 +100,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.2813848317905299, 0.25467778375530703)\n"
+      "diff pvalue: 0.2813848317905299\n",
+      "equiv pvalue: 0.25467778375530703\n"
      ]
     },
     {
@@ -116,7 +118,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.0001163869932631116, 0.9999531175664844)\n"
+      "diff pvalue: 0.0001163869932631116\n",
+      "equiv pvalue: 0.9999531175664844\n"
      ]
     },
     {
@@ -133,7 +136,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.8946560766366678, 0.03917496449159887)\n"
+      "diff pvalue: 0.8946560766366678\n",
+      "equiv pvalue: 0.03917496449159887\n"
      ]
     },
     {
@@ -154,21 +158,21 @@
     "group1_vals = [7, 9, 7, 10, 11, 12, 10]\n",
     "group2_vals = [10,11,13,9]\n",
     "\n",
-    "print(perform_t_tests(group1_vals, group2_vals, delta))\n",
+    "perform_t_tests(group1_vals, group2_vals, delta)\n",
     "plot_groups(group1_vals, group2_vals)\n",
     "\n",
     "# example 2\n",
     "group1_vals = [7, 9, 7, 10, 11, 12, 10]\n",
     "group2_vals = [2,3,4,2]\n",
     "\n",
-    "print(perform_t_tests(group1_vals, group2_vals, delta))\n",
+    "perform_t_tests(group1_vals, group2_vals, delta)\n",
     "plot_groups(group1_vals, group2_vals)\n",
     "\n",
     "# example 3\n",
     "group1_vals = [7, 9, 7, 10, 11, 12, 8]\n",
     "group2_vals = [6, 9, 7, 10, 10, 12, 9]\n",
     "\n",
-    "print(perform_t_tests(group1_vals, group2_vals, delta))\n",
+    "perform_t_tests(group1_vals, group2_vals, delta)\n",
     "plot_groups(group1_vals, group2_vals)\n"
    ]
   },
