--- a/notebooks/deseq2_format.ipynb
+++ b/notebooks/deseq2_format.ipynb
@@ -70,32 +70,53 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "494d2674",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nnz = (~(df == 0).all())\n",
+    "\n",
+    "# Remove columns that are all zero\n",
+    "df = df[nnz[nnz].index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "38a41735",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/jolivie1/Desktop/Research/equivalence_testing/scripts/equiv_test_funcs.py:46: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  t1 = (np.mean(group1_vals) - np.mean(group2_vals) - delta)/np.sqrt(np.var(group1_vals)/len(group1_vals)+np.var(group2_vals)/len(group2_vals))\n",
-      "/Users/jolivie1/Desktop/Research/equivalence_testing/scripts/equiv_test_funcs.py:49: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  t2 = (np.mean(group1_vals) - np.mean(group2_vals) + delta)/np.sqrt(np.var(group1_vals)/len(group1_vals)+np.var(group2_vals)/len(group2_vals))\n"
-     ]
-    },
-    {
-     "ename": "UFuncTypeError",
-     "evalue": "ufunc 'add' did not contain a loop with signature matching types (dtype('<U3'), dtype('<U3')) -> None",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUFuncTypeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m delta \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m----> 2\u001b[0m out_df \u001b[38;5;241m=\u001b[39m \u001b[43mloop_over_genes\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdelta\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mplot\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m out_df \u001b[38;5;241m=\u001b[39m process_out_df(out_df, delta)\n",
-      "File \u001b[0;32m~/Desktop/Research/equivalence_testing/scripts/equiv_test_funcs.py:85\u001b[0m, in \u001b[0;36mloop_over_genes\u001b[0;34m(df, delta, plot)\u001b[0m\n\u001b[1;32m     82\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m gene \u001b[38;5;129;01min\u001b[39;00m [x \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m df\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;28;01mif\u001b[39;00m x \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcell_type\u001b[39m\u001b[38;5;124m\"\u001b[39m]:\n\u001b[1;32m     84\u001b[0m     samples \u001b[38;5;241m=\u001b[39m grouped_df[gene]\u001b[38;5;241m.\u001b[39mapply(\u001b[38;5;28mlist\u001b[39m)\n\u001b[0;32m---> 85\u001b[0m     diff_pval, equiv_pval \u001b[38;5;241m=\u001b[39m \u001b[43mperform_t_tests\u001b[49m\u001b[43m(\u001b[49m\u001b[43msamples\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msamples\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdelta\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     86\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m plot \u001b[38;5;129;01mand\u001b[39;00m ((diff_pval \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0.05\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (equiv_pval \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0.05\u001b[39m)):\n\u001b[1;32m     87\u001b[0m         \u001b[38;5;28mprint\u001b[39m(gene)\n",
-      "File \u001b[0;32m~/Desktop/Research/equivalence_testing/scripts/equiv_test_funcs.py:37\u001b[0m, in \u001b[0;36mperform_t_tests\u001b[0;34m(group1_vals, group2_vals, delta)\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mperform_t_tests\u001b[39m(group1_vals, group2_vals, delta):\n\u001b[0;32m---> 37\u001b[0m     mean1 \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmean\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgroup1_vals\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     38\u001b[0m     mean2 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmean(group2_vals)\n\u001b[1;32m     40\u001b[0m     \u001b[38;5;66;03m# perform standard t-test (testing for difference)\u001b[39;00m\n\u001b[1;32m     41\u001b[0m     \u001b[38;5;66;03m# consider switching to Welch's t-test (current assumes equal variances)\u001b[39;00m\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/numpy/core/fromnumeric.py:3504\u001b[0m, in \u001b[0;36mmean\u001b[0;34m(a, axis, dtype, out, keepdims, where)\u001b[0m\n\u001b[1;32m   3501\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   3502\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m mean(axis\u001b[38;5;241m=\u001b[39maxis, dtype\u001b[38;5;241m=\u001b[39mdtype, out\u001b[38;5;241m=\u001b[39mout, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m-> 3504\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_methods\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_mean\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   3505\u001b[0m \u001b[43m                      \u001b[49m\u001b[43mout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/numpy/core/_methods.py:118\u001b[0m, in \u001b[0;36m_mean\u001b[0;34m(a, axis, dtype, out, keepdims, where)\u001b[0m\n\u001b[1;32m    115\u001b[0m         dtype \u001b[38;5;241m=\u001b[39m mu\u001b[38;5;241m.\u001b[39mdtype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mf4\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    116\u001b[0m         is_float16_result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m--> 118\u001b[0m ret \u001b[38;5;241m=\u001b[39m \u001b[43mumr_sum\u001b[49m\u001b[43m(\u001b[49m\u001b[43marr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkeepdims\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwhere\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mwhere\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    119\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(ret, mu\u001b[38;5;241m.\u001b[39mndarray):\n\u001b[1;32m    120\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m _no_nep50_warning():\n",
-      "\u001b[0;31mUFuncTypeError\u001b[0m: ufunc 'add' did not contain a loop with signature matching types (dtype('<U3'), dtype('<U3')) -> None"
+      "             gene  nnz_group1  nnz_group2  avg_group1  avg_group2  diff_pval   \n",
+      "0           Gnai3           6           6    0.017973    0.017332   0.102859  \\\n",
+      "1           Cdc45           6           6    0.000759    0.000746   0.814752   \n",
+      "2             H19           6           6    0.175760    0.154932   0.432787   \n",
+      "3           Scml2           6           6    0.000204    0.000207   0.950984   \n",
+      "4            Apoh           6           6    0.000022    0.000028   0.386941   \n",
+      "...           ...         ...         ...         ...         ...        ...   \n",
+      "35967  CT868690.1           6           6    0.000407    0.000406   0.994697   \n",
+      "35968  AC240460.1           2           2    0.000004    0.000006   0.635820   \n",
+      "35969  AC117663.3           6           5    0.000023    0.000023   0.940498   \n",
+      "35970  AL805980.1           4           2    0.000016    0.000008   0.267258   \n",
+      "35971  AC167036.2           3           3    0.000034    0.000020   0.459389   \n",
+      "\n",
+      "         equiv_pval  \n",
+      "0      4.889949e-37  \n",
+      "1      4.740172e-47  \n",
+      "2      1.048568e-14  \n",
+      "3      3.431333e-47  \n",
+      "4      1.050333e-57  \n",
+      "...             ...  \n",
+      "35967  3.117648e-47  \n",
+      "35968  8.907228e-60  \n",
+      "35969  2.920755e-55  \n",
+      "35970  2.553295e-57  \n",
+      "35971  1.849056e-52  \n",
+      "\n",
+      "[35972 rows x 7 columns]\n"
      ]
     }
    ],
