remove genes with less than 2 samples nnz

--- a/notebooks/reformat_HLCA.ipynb
+++ b/notebooks/reformat_HLCA.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "05d8389e",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "58984c61",
    "metadata": {},
    "outputs": [],
@@ -52,17 +52,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "24546955",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>P1_4_TTGCGTCAGCTTCGCG</th>\n",
+       "      <th>TGACGGCGTCCGAATT_HD68</th>\n",
+       "      <th>GATGCTATCTCCAACC-1-HCATisStab7747198</th>\n",
+       "      <th>P3_7_TCATTTGTCTCAAACG</th>\n",
+       "      <th>P3_6_TCCACACTCGTCACGG</th>\n",
+       "      <th>GTATCTTTCTGATTCT-1-HCATisStab7747198</th>\n",
+       "      <th>ACGAGGACATGAACCT_HD67</th>\n",
+       "      <th>AAACGGGGTCTAGTCA_F02617</th>\n",
+       "      <th>GCTTTCGGTGTCTAAC_SC85</th>\n",
+       "      <th>CAACGGCGTGGAGGTT_SC143</th>\n",
+       "      <th>...</th>\n",
+       "      <th>TTGAACGCATCGACGC_F02524</th>\n",
+       "      <th>GAATAAGAGAGCTATA-SC156</th>\n",
+       "      <th>TAAACCGCATATGGTC_HD67</th>\n",
+       "      <th>P2_2_AATCGGTGTGCTGTAT</th>\n",
+       "      <th>CACAGTAAGGGTATCG-SC56</th>\n",
+       "      <th>CGACTTCTCAGAAATG_F02526</th>\n",
+       "      <th>GGCTGGTTCAGAGACG-1-HCATisStab7587205</th>\n",
+       "      <th>CACCTTGGTGTGACGA_F01394</th>\n",
+       "      <th>CCCTCCTCAGCATGAG_F02611</th>\n",
+       "      <th>CTTGGCTGTTCGTTGA_HD68</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>TSPAN6</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DPM1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SCYL3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C1orf112</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FGR</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 25112 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         P1_4_TTGCGTCAGCTTCGCG TGACGGCGTCCGAATT_HD68   \n",
+       "TSPAN6                     0.0                   0.0  \\\n",
+       "DPM1                       0.0                   0.0   \n",
+       "SCYL3                      1.0                   0.0   \n",
+       "C1orf112                   0.0                   0.0   \n",
+       "FGR                        0.0                   0.0   \n",
+       "\n",
+       "         GATGCTATCTCCAACC-1-HCATisStab7747198 P3_7_TCATTTGTCTCAAACG   \n",
+       "TSPAN6                                    0.0                   0.0  \\\n",
+       "DPM1                                      0.0                   0.0   \n",
+       "SCYL3                                     0.0                   0.0   \n",
+       "C1orf112                                  0.0                   0.0   \n",
+       "FGR                                       0.0                   0.0   \n",
+       "\n",
+       "         P3_6_TCCACACTCGTCACGG GTATCTTTCTGATTCT-1-HCATisStab7747198   \n",
+       "TSPAN6                     7.0                                  0.0  \\\n",
+       "DPM1                       2.0                                  0.0   \n",
+       "SCYL3                      1.0                                  0.0   \n",
+       "C1orf112                   0.0                                  0.0   \n",
+       "FGR                        0.0                                  1.0   \n",
+       "\n",
+       "         ACGAGGACATGAACCT_HD67 AAACGGGGTCTAGTCA_F02617 GCTTTCGGTGTCTAAC_SC85   \n",
+       "TSPAN6                     1.0                     2.0                   2.0  \\\n",
+       "DPM1                       0.0                     1.0                   0.0   \n",
+       "SCYL3                      0.0                     0.0                   0.0   \n",
+       "C1orf112                   0.0                     0.0                   0.0   \n",
+       "FGR                        0.0                     0.0                   0.0   \n",
+       "\n",
+       "         CAACGGCGTGGAGGTT_SC143  ... TTGAACGCATCGACGC_F02524   \n",
+       "TSPAN6                      0.0  ...                     0.0  \\\n",
+       "DPM1                        0.0  ...                     0.0   \n",
+       "SCYL3                       0.0  ...                     0.0   \n",
+       "C1orf112                    0.0  ...                     0.0   \n",
+       "FGR                         0.0  ...                     0.0   \n",
+       "\n",
+       "         GAATAAGAGAGCTATA-SC156 TAAACCGCATATGGTC_HD67 P2_2_AATCGGTGTGCTGTAT   \n",
+       "TSPAN6                      0.0                   0.0                   0.0  \\\n",
+       "DPM1                        0.0                   0.0                   0.0   \n",
+       "SCYL3                       0.0                   0.0                   0.0   \n",
+       "C1orf112                    0.0                   0.0                   0.0   \n",
+       "FGR                         0.0                   0.0                   0.0   \n",
+       "\n",
+       "         CACAGTAAGGGTATCG-SC56 CGACTTCTCAGAAATG_F02526   \n",
+       "TSPAN6                     0.0                     0.0  \\\n",
+       "DPM1                       0.0                     0.0   \n",
+       "SCYL3                      0.0                     0.0   \n",
+       "C1orf112                   0.0                     0.0   \n",
+       "FGR                        0.0                     0.0   \n",
+       "\n",
+       "         GGCTGGTTCAGAGACG-1-HCATisStab7587205 CACCTTGGTGTGACGA_F01394   \n",
+       "TSPAN6                                    0.0                     0.0  \\\n",
+       "DPM1                                      0.0                     0.0   \n",
+       "SCYL3                                     0.0                     0.0   \n",
+       "C1orf112                                  0.0                     0.0   \n",
+       "FGR                                       0.0                     0.0   \n",
+       "\n",
+       "         CCCTCCTCAGCATGAG_F02611 CTTGGCTGTTCGTTGA_HD68  \n",
+       "TSPAN6                       0.0                   1.0  \n",
+       "DPM1                         0.0                   0.0  \n",
+       "SCYL3                        0.0                   0.0  \n",
+       "C1orf112                     0.0                   0.0  \n",
+       "FGR                          0.0                   0.0  \n",
+       "\n",
+       "[5 rows x 25112 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.T.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c3e29ce4",
    "metadata": {},
    "outputs": [],
@@ -72,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0347bc41",
    "metadata": {},
    "outputs": [],
