--- a/notebooks/vectorize_ttest.ipynb
+++ b/notebooks/vectorize_ttest.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 185,
    "id": "80da4b99",
    "metadata": {},
    "outputs": [],
@@ -61,8 +61,8 @@
     "def degrees_freedom_welch(df):\n",
     "    # see methods for formula\n",
     "    # deviation from simple nf + ng - 2 because we're not assuming equal variances\n",
-    "    df[\"nu\"] = (df[\"sf2\"]/df[\"nf\"] + df[\"sg2\"]/df[\"ng\"])**2/(df[\"sf2\"]**2/(df[\"nf\"]**2*(df[\"nf\"] - 1)) + df[\"sg2\"]**2/(df[\"nf\"]**2*(df[\"ng\"] - 1)))\n",
-    "    #df[\"nu\"] = df[\"nf\"]  + df[\"ng\"]  - 2\n",
+    "    #df[\"nu\"] = (df[\"sf2\"]/df[\"nf\"] + df[\"sg2\"]/df[\"ng\"])**2/(df[\"sf2\"]**2/(df[\"nf\"]**2*(df[\"nf\"] - 1)) + df[\"sg2\"]**2/(df[\"nf\"]**2*(df[\"ng\"] - 1)))\n",
+    "    df[\"nu\"] = df[\"nf\"]  + df[\"ng\"]  - 2\n",
     "    return df\n",
     "\n",
     "def calc_t(df, delta):\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 186,
    "id": "7462042d",
    "metadata": {},
    "outputs": [
@@ -132,22 +132,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Prrxl1</th>\n",
-       "      <td>6.083772</td>\n",
-       "      <td>3.325149</td>\n",
-       "      <td>0.059716</td>\n",
-       "      <td>0.064999</td>\n",
+       "      <th>Gm43094</th>\n",
+       "      <td>0.917133</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.005431</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>6</td>\n",
        "      <td>6</td>\n",
-       "      <td>9.982087</td>\n",
-       "      <td>19.134090</td>\n",
-       "      <td>26.070192</td>\n",
-       "      <td>12.197989</td>\n",
+       "      <td>10</td>\n",
+       "      <td>30.483920</td>\n",
+       "      <td>63.722196</td>\n",
+       "      <td>-2.754356</td>\n",
        "      <td>1.000000e+00</td>\n",
-       "      <td>3.388911e-09</td>\n",
-       "      <td>9.999999e-01</td>\n",
-       "      <td>8.176249e-11</td>\n",
-       "      <td>9.999999e-01</td>\n",
+       "      <td>3.381317e-11</td>\n",
+       "      <td>1.016286e-02</td>\n",
+       "      <td>1.099121e-14</td>\n",
+       "      <td>1.016286e-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Scgn</th>\n",
@@ -157,14 +157,50 @@
        "      <td>0.065920</td>\n",
        "      <td>6</td>\n",
        "      <td>6</td>\n",
-       "      <td>8.041123</td>\n",
+       "      <td>10</td>\n",
        "      <td>25.371537</td>\n",
        "      <td>33.616050</td>\n",
        "      <td>17.127024</td>\n",
        "      <td>1.000000e+00</td>\n",
-       "      <td>5.802966e-09</td>\n",
+       "      <td>2.074652e-10</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>6.413092e-12</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Prrxl1</th>\n",
+       "      <td>6.083772</td>\n",
+       "      <td>3.325149</td>\n",
+       "      <td>0.059716</td>\n",
+       "      <td>0.064999</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>10</td>\n",
+       "      <td>19.134090</td>\n",
+       "      <td>26.070192</td>\n",
+       "      <td>12.197989</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>3.306543e-09</td>\n",
        "      <td>9.999999e-01</td>\n",
-       "      <td>3.078697e-10</td>\n",
+       "      <td>7.935097e-11</td>\n",
+       "      <td>9.999999e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gm7609</th>\n",
+       "      <td>3.463566</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.222662</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>10</td>\n",
+       "      <td>17.979452</td>\n",
+       "      <td>23.170474</td>\n",
+       "      <td>12.788429</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>6.062924e-09</td>\n",
+       "      <td>9.999999e-01</td>\n",
+       "      <td>2.535024e-10</td>\n",
        "      <td>9.999999e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -175,51 +211,15 @@
        "      <td>0.002080</td>\n",
        "      <td>6</td>\n",
        "      <td>6</td>\n",
-       "      <td>9.617185</td>\n",
+       "      <td>10</td>\n",
        "      <td>-17.357115</td>\n",
        "      <td>24.236901</td>\n",
        "      <td>-58.951130</td>\n",
-       "      <td>6.997178e-09</td>\n",
-       "      <td>1.399436e-08</td>\n",
-       "      <td>6.205380e-14</td>\n",
-       "      <td>3.015951e-10</td>\n",
-       "      <td>3.015951e-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sema5b</th>\n",
-       "      <td>7.535782</td>\n",
-       "      <td>5.774549</td>\n",
-       "      <td>0.024987</td>\n",
-       "      <td>0.040670</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>9.460276</td>\n",
-       "      <td>16.836480</td>\n",
-       "      <td>26.395962</td>\n",
-       "      <td>7.276998</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>2.272211e-08</td>\n",
-       "      <td>9.999820e-01</td>\n",
-       "      <td>1.754831e-10</td>\n",
-       "      <td>9.999820e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ephb2</th>\n",
-       "      <td>8.706187</td>\n",
-       "      <td>9.438369</td>\n",
-       "      <td>0.008093</td>\n",
-       "      <td>0.004801</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>9.387878</td>\n",
-       "      <td>-15.794482</td>\n",
-       "      <td>5.777306</td>\n",
-       "      <td>-37.366270</td>\n",
-       "      <td>2.229063e-08</td>\n",
-       "      <td>4.458125e-08</td>\n",
-       "      <td>7.826099e-12</td>\n",
-       "      <td>1.136613e-04</td>\n",
-       "      <td>1.136613e-04</td>\n",
+       "      <td>4.268590e-09</td>\n",
+       "      <td>8.537181e-09</td>\n",
+       "      <td>2.395685e-14</td>\n",
+       "      <td>1.628156e-10</td>\n",
+       "      <td>1.628156e-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -247,15 +247,15 @@
        "      <td>0.032637</td>\n",
        "      <td>6</td>\n",
        "      <td>6</td>\n",
-       "      <td>9.837187</td>\n",
+       "      <td>10</td>\n",
        "      <td>-0.000457</td>\n",
        "      <td>8.949134</td>\n",
        "      <td>-8.950048</td>\n",
-       "      <td>4.998223e-01</td>\n",
-       "      <td>9.996445e-01</td>\n",
-       "      <td>2.437877e-06</td>\n",
-       "      <td>2.440081e-06</td>\n",
-       "      <td>2.440081e-06</td>\n",
+       "      <td>4.998222e-01</td>\n",
+       "      <td>9.996444e-01</td>\n",
+       "      <td>2.175137e-06</td>\n",
+       "      <td>2.177132e-06</td>\n",
+       "      <td>2.177132e-06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>n.R5s197</th>\n",
@@ -265,15 +265,15 @@
        "      <td>0.207470</td>\n",
        "      <td>6</td>\n",
        "      <td>6</td>\n",
-       "      <td>9.994422</td>\n",
+       "      <td>10</td>\n",
        "      <td>0.000421</td>\n",
        "      <td>3.757853</td>\n",
        "      <td>-3.757010</td>\n",
        "      <td>5.001639e-01</td>\n",
        "      <td>9.996722e-01</td>\n",
-       "      <td>1.872066e-03</td>\n",
-       "      <td>1.869478e-03</td>\n",
-       "      <td>1.872066e-03</td>\n",
+       "      <td>1.870239e-03</td>\n",
+       "      <td>1.867653e-03</td>\n",
+       "      <td>1.870239e-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Gm25821</th>\n",
@@ -283,15 +283,15 @@
        "      <td>0.621555</td>\n",
        "      <td>6</td>\n",
        "      <td>6</td>\n",
-       "      <td>9.120335</td>\n",
+       "      <td>10</td>\n",
        "      <td>-0.000411</td>\n",
        "      <td>2.514659</td>\n",
        "      <td>-2.515481</td>\n",
-       "      <td>4.998403e-01</td>\n",
-       "      <td>9.996806e-01</td>\n",
-       "      <td>1.634732e-02</td>\n",
-       "      <td>1.636953e-02</td>\n",
-       "      <td>1.636953e-02</td>\n",
+       "      <td>4.998399e-01</td>\n",
+       "      <td>9.996799e-01</td>\n",
+       "      <td>1.531179e-02</td>\n",
+       "      <td>1.533340e-02</td>\n",
+       "      <td>1.533340e-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Olfr1301</th>\n",
@@ -301,15 +301,15 @@
        "      <td>0.506197</td>\n",
        "      <td>6</td>\n",
        "      <td>6</td>\n",
-       "      <td>9.960398</td>\n",
+       "      <td>10</td>\n",
        "      <td>-0.000408</td>\n",
        "      <td>2.356039</td>\n",
        "      <td>-2.356856</td>\n",
-       "      <td>4.998412e-01</td>\n",
+       "      <td>4.998411e-01</td>\n",
        "      <td>9.996823e-01</td>\n",
-       "      <td>2.013124e-02</td>\n",
-       "      <td>2.015926e-02</td>\n",
-       "      <td>2.015926e-02</td>\n",
+       "      <td>2.008408e-02</td>\n",
+       "      <td>2.011207e-02</td>\n",
+       "      <td>2.011207e-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Gm6723</th>\n",
@@ -319,15 +319,15 @@
        "      <td>0.313799</td>\n",
        "      <td>6</td>\n",
        "      <td>6</td>\n",
-       "      <td>8.833681</td>\n",
+       "      <td>10</td>\n",
        "      <td>-0.000073</td>\n",
        "      <td>3.610201</td>\n",
        "      <td>-3.610348</td>\n",
-       "      <td>4.999716e-01</td>\n",
-       "      <td>9.999431e-01</td>\n",
-       "      <td>2.916333e-03</td>\n",
-       "      <td>2.916993e-03</td>\n",
-       "      <td>2.916993e-03</td>\n",
+       "      <td>4.999715e-01</td>\n",
+       "      <td>9.999429e-01</td>\n",
+       "      <td>2.382676e-03</td>\n",
+       "      <td>2.383256e-03</td>\n",
+       "      <td>2.383256e-03</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -335,49 +335,49 @@
        "</div>"
       ],
       "text/plain": [
-       "               muf       mug       sf2       sg2  nf  ng        nu         t0   \n",
-       "Prrxl1    6.083772  3.325149  0.059716  0.064999   6   6  9.982087  19.134090  \\\n",
-       "Scgn      6.825182  3.747797  0.022352  0.065920   6   6  8.041123  25.371537   \n",
-       "Rfng      9.092809  9.510107  0.001388  0.002080   6   6  9.617185 -17.357115   \n",
-       "Sema5b    7.535782  5.774549  0.024987  0.040670   6   6  9.460276  16.836480   \n",
-       "Ephb2     8.706187  9.438369  0.008093  0.004801   6   6  9.387878 -15.794482   \n",
-       "...            ...       ...       ...       ...  ..  ..       ...        ...   \n",
-       "Zc3h8     6.294303  6.294354  0.042274  0.032637   6   6  9.837187  -0.000457   \n",
-       "n.R5s197  1.892780  1.892667  0.217510  0.207470   6   6  9.994422   0.000421   \n",
-       "Gm25821   0.685335  0.685499  0.326975  0.621555   6   6  9.120335  -0.000411   \n",
-       "Olfr1301  0.449902  0.450075  0.574330  0.506197   6   6  9.960398  -0.000408   \n",
-       "Gm6723    3.412436  3.412456  0.146533  0.313799   6   6  8.833681  -0.000073   \n",
+       "               muf       mug       sf2       sg2  nf  ng  nu         t0   \n",
+       "Gm43094   0.917133  0.000000  0.005431  0.000000   6   6  10  30.483920  \\\n",
+       "Scgn      6.825182  3.747797  0.022352  0.065920   6   6  10  25.371537   \n",
+       "Prrxl1    6.083772  3.325149  0.059716  0.064999   6   6  10  19.134090   \n",
+       "Gm7609    3.463566  0.000000  0.222662  0.000000   6   6  10  17.979452   \n",
+       "Rfng      9.092809  9.510107  0.001388  0.002080   6   6  10 -17.357115   \n",
+       "...            ...       ...       ...       ...  ..  ..  ..        ...   \n",
+       "Zc3h8     6.294303  6.294354  0.042274  0.032637   6   6  10  -0.000457   \n",
+       "n.R5s197  1.892780  1.892667  0.217510  0.207470   6   6  10   0.000421   \n",
+       "Gm25821   0.685335  0.685499  0.326975  0.621555   6   6  10  -0.000411   \n",
+       "Olfr1301  0.449902  0.450075  0.574330  0.506197   6   6  10  -0.000408   \n",
+       "Gm6723    3.412436  3.412456  0.146533  0.313799   6   6  10  -0.000073   \n",
        "\n",
        "                 t1        t-1        cdf_t0     diff_pval        cdf_t1   \n",
-       "Prrxl1    26.070192  12.197989  1.000000e+00  3.388911e-09  9.999999e-01  \\\n",
-       "Scgn      33.616050  17.127024  1.000000e+00  5.802966e-09  9.999999e-01   \n",
-       "Rfng      24.236901 -58.951130  6.997178e-09  1.399436e-08  6.205380e-14   \n",
-       "Sema5b    26.395962   7.276998  1.000000e+00  2.272211e-08  9.999820e-01   \n",
-       "Ephb2      5.777306 -37.366270  2.229063e-08  4.458125e-08  7.826099e-12   \n",
+       "Gm43094   63.722196  -2.754356  1.000000e+00  3.381317e-11  1.016286e-02  \\\n",
+       "Scgn      33.616050  17.127024  1.000000e+00  2.074652e-10  1.000000e+00   \n",
+       "Prrxl1    26.070192  12.197989  1.000000e+00  3.306543e-09  9.999999e-01   \n",
+       "Gm7609    23.170474  12.788429  1.000000e+00  6.062924e-09  9.999999e-01   \n",
+       "Rfng      24.236901 -58.951130  4.268590e-09  8.537181e-09  2.395685e-14   \n",
        "...             ...        ...           ...           ...           ...   \n",
-       "Zc3h8      8.949134  -8.950048  4.998223e-01  9.996445e-01  2.437877e-06   \n",
-       "n.R5s197   3.757853  -3.757010  5.001639e-01  9.996722e-01  1.872066e-03   \n",
-       "Gm25821    2.514659  -2.515481  4.998403e-01  9.996806e-01  1.634732e-02   \n",
-       "Olfr1301   2.356039  -2.356856  4.998412e-01  9.996823e-01  2.013124e-02   \n",
-       "Gm6723     3.610201  -3.610348  4.999716e-01  9.999431e-01  2.916333e-03   \n",
+       "Zc3h8      8.949134  -8.950048  4.998222e-01  9.996444e-01  2.175137e-06   \n",
+       "n.R5s197   3.757853  -3.757010  5.001639e-01  9.996722e-01  1.870239e-03   \n",
+       "Gm25821    2.514659  -2.515481  4.998399e-01  9.996799e-01  1.531179e-02   \n",
+       "Olfr1301   2.356039  -2.356856  4.998411e-01  9.996823e-01  2.008408e-02   \n",
+       "Gm6723     3.610201  -3.610348  4.999715e-01  9.999429e-01  2.382676e-03   \n",
        "\n",
        "                cdf_t2    equiv_pval  \n",
-       "Prrxl1    8.176249e-11  9.999999e-01  \n",
-       "Scgn      3.078697e-10  9.999999e-01  \n",
-       "Rfng      3.015951e-10  3.015951e-10  \n",
-       "Sema5b    1.754831e-10  9.999820e-01  \n",
-       "Ephb2     1.136613e-04  1.136613e-04  \n",
+       "Gm43094   1.099121e-14  1.016286e-02  \n",
+       "Scgn      6.413092e-12  1.000000e+00  \n",
+       "Prrxl1    7.935097e-11  9.999999e-01  \n",
+       "Gm7609    2.535024e-10  9.999999e-01  \n",
+       "Rfng      1.628156e-10  1.628156e-10  \n",
        "...                ...           ...  \n",
-       "Zc3h8     2.440081e-06  2.440081e-06  \n",
-       "n.R5s197  1.869478e-03  1.872066e-03  \n",
-       "Gm25821   1.636953e-02  1.636953e-02  \n",
-       "Olfr1301  2.015926e-02  2.015926e-02  \n",
-       "Gm6723    2.916993e-03  2.916993e-03  \n",
+       "Zc3h8     2.177132e-06  2.177132e-06  \n",
+       "n.R5s197  1.867653e-03  1.870239e-03  \n",
+       "Gm25821   1.533340e-02  1.533340e-02  \n",
+       "Olfr1301  2.011207e-02  2.011207e-02  \n",
+       "Gm6723    2.383256e-03  2.383256e-03  \n",
        "\n",
        "[32252 rows x 15 columns]"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,13 +391,17 @@
     "calc_df[\"nf\"] = len(groups[0])\n",
     "calc_df[\"ng\"] = len(groups[1])\n",
     "\n",
+    "\n",
     "degrees_freedom_welch(calc_df)\n",
     "calc_t(calc_df, 0)\n",
     "calc_t(calc_df, delta)\n",
     "calc_t(calc_df, -delta)\n",
     "\n",
-    "\n",
-    "\n",
+    "# adjust p values\n",
+    "# add fold change\n",
+    "# add num nnz\n",
+    "# add log vs non-log values\n",
+    "# add true/false based on fold change\n",
     "calc_diff_pval(calc_df)\n",
     "\n",
     "calc_equiv_pval(calc_df)\n",
