added more data files, debugged hyphen/period bug in R

--- a/notebooks/reformat_HLCA.ipynb
+++ b/notebooks/reformat_HLCA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "5809324d-7790-4b7d-b33e-26aef5a4e373",
    "metadata": {},
    "outputs": [
@@ -31,18 +31,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "id": "05d8389e",
    "metadata": {},
    "outputs": [],
    "source": [
     "outpath = \"/Users/jolivie1/Desktop/Research/equivalence_testing_output/notebooks/output/reformat_HLCA/\"\n",
-    "name = \"HLCA_normal_1000_ciliated-columnar-cell-of-tracheobronchial-tree_CD8-positive-alpha-beta-T-cell_all_all_raw\""
+    "name = \"HLCA_normal_1000_ciliated-columnar-cell-of-tracheobronchial-tree_CD8-positive-alpha-beta-T-cell_all_all_raw\"\n",
+    "#name = \"HLCA_normal_1000_classical-monocyte_non-classical-monocyte_all_all_raw\"\n",
+    "num_cells_group = 1000\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "id": "58984c61",
    "metadata": {},
    "outputs": [],
@@ -52,7 +54,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
+   "id": "e647a64a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(25112, 17501)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "06120269",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cell_types = df[\"cell_type\"].unique()\n",
+    "\n",
+    "subset_ind = []\n",
+    "\n",
+    "for i in range(2):\n",
+    "    new_index = df[df[\"cell_type\"] == cell_types[i]][[x for x in df.columns if x != \"cell_type\"]].sum(axis=1).sort_values().tail(num_cells_group).index\n",
+    "    \n",
+    "    subset_ind = [*subset_ind, *new_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "61f597ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.loc[subset_ind]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ae5391e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "id": "24546955",
    "metadata": {},
    "outputs": [
@@ -77,27 +135,27 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>P1_4_TTGCGTCAGCTTCGCG</th>\n",
-       "      <th>TGACGGCGTCCGAATT_HD68</th>\n",
-       "      <th>GATGCTATCTCCAACC-1-HCATisStab7747198</th>\n",
-       "      <th>P3_7_TCATTTGTCTCAAACG</th>\n",
-       "      <th>P3_6_TCCACACTCGTCACGG</th>\n",
-       "      <th>GTATCTTTCTGATTCT-1-HCATisStab7747198</th>\n",
-       "      <th>ACGAGGACATGAACCT_HD67</th>\n",
-       "      <th>AAACGGGGTCTAGTCA_F02617</th>\n",
-       "      <th>GCTTTCGGTGTCTAAC_SC85</th>\n",
-       "      <th>CAACGGCGTGGAGGTT_SC143</th>\n",
+       "      <th>CTACATTCAAACGCGA-1-HCATisStab7747197</th>\n",
+       "      <th>CGAGCCAGTAGCTGCC-1-HCATisStab7747200</th>\n",
+       "      <th>ACCGTAAAGTGGACGT-1-HCATisStab7747200</th>\n",
+       "      <th>CAGCAGCGTTCGCTAA_HD101</th>\n",
+       "      <th>ACATCAGTCCAAATGC-1-HCATisStab7747200</th>\n",
+       "      <th>GCAGTTAGTGCGAAAC-1-HCATisStab7747200</th>\n",
+       "      <th>TAGGCATCACAGACAG-1-HCATisStab7587202</th>\n",
+       "      <th>7239213_GCAAACTAGATATGGT</th>\n",
+       "      <th>TAGAGCTAGAGACTTA-1-HCATisStab7747200</th>\n",
+       "      <th>P2_1_TTAGGACAGAATGTGT</th>\n",
        "      <th>...</th>\n",
-       "      <th>TTGAACGCATCGACGC_F02524</th>\n",
-       "      <th>GAATAAGAGAGCTATA-SC156</th>\n",
-       "      <th>TAAACCGCATATGGTC_HD67</th>\n",
-       "      <th>P2_2_AATCGGTGTGCTGTAT</th>\n",
-       "      <th>CACAGTAAGGGTATCG-SC56</th>\n",
-       "      <th>CGACTTCTCAGAAATG_F02526</th>\n",
-       "      <th>GGCTGGTTCAGAGACG-1-HCATisStab7587205</th>\n",
-       "      <th>CACCTTGGTGTGACGA_F01394</th>\n",
-       "      <th>CCCTCCTCAGCATGAG_F02611</th>\n",
-       "      <th>CTTGGCTGTTCGTTGA_HD68</th>\n",
+       "      <th>P3_6_GTCGGGTTCTGCTGTC</th>\n",
+       "      <th>TTCTCCTTCCTTGGTC_SC10</th>\n",
+       "      <th>P1_2_CATTATCCAGTGGGAT</th>\n",
+       "      <th>ATTTCTGCATACAGCT_SC22</th>\n",
+       "      <th>GAACATCTCTTGTTTG_SC22</th>\n",
+       "      <th>CACCTTGCAGGGTACA_SC10</th>\n",
+       "      <th>P2_7_GTGCATAAGAGCTGCA</th>\n",
+       "      <th>CATCGGGAGGCTAGCA_SC22</th>\n",
+       "      <th>GCGACCACAGCGTTCG_SC24</th>\n",
+       "      <th>CATCAAGCAGTAAGCG_SC24</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -107,23 +165,23 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>7.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>9.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DPM1</th>\n",
@@ -131,47 +189,47 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SCYL3</th>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C1orf112</th>\n",
@@ -199,15 +257,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FGR</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -216,84 +274,98 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 25112 columns</p>\n",
+       "<p>5 rows × 2000 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         P1_4_TTGCGTCAGCTTCGCG TGACGGCGTCCGAATT_HD68   \n",
-       "TSPAN6                     0.0                   0.0  \\\n",
-       "DPM1                       0.0                   0.0   \n",
-       "SCYL3                      1.0                   0.0   \n",
-       "C1orf112                   0.0                   0.0   \n",
-       "FGR                        0.0                   0.0   \n",
+       "         CTACATTCAAACGCGA-1-HCATisStab7747197   \n",
+       "TSPAN6                                    0.0  \\\n",
+       "DPM1                                      0.0   \n",
+       "SCYL3                                     0.0   \n",
+       "C1orf112                                  0.0   \n",
+       "FGR                                       1.0   \n",
        "\n",
-       "         GATGCTATCTCCAACC-1-HCATisStab7747198 P3_7_TCATTTGTCTCAAACG   \n",
-       "TSPAN6                                    0.0                   0.0  \\\n",
-       "DPM1                                      0.0                   0.0   \n",
-       "SCYL3                                     0.0                   0.0   \n",
-       "C1orf112                                  0.0                   0.0   \n",
-       "FGR                                       0.0                   0.0   \n",
+       "         CGAGCCAGTAGCTGCC-1-HCATisStab7747200   \n",
+       "TSPAN6                                    0.0  \\\n",
+       "DPM1                                      0.0   \n",
+       "SCYL3                                     0.0   \n",
+       "C1orf112                                  0.0   \n",
+       "FGR                                       2.0   \n",
        "\n",
-       "         P3_6_TCCACACTCGTCACGG GTATCTTTCTGATTCT-1-HCATisStab7747198   \n",
-       "TSPAN6                     7.0                                  0.0  \\\n",
-       "DPM1                       2.0                                  0.0   \n",
-       "SCYL3                      1.0                                  0.0   \n",
-       "C1orf112                   0.0                                  0.0   \n",
-       "FGR                        0.0                                  1.0   \n",
+       "         ACCGTAAAGTGGACGT-1-HCATisStab7747200 CAGCAGCGTTCGCTAA_HD101   \n",
+       "TSPAN6                                    0.0                    0.0  \\\n",
+       "DPM1                                      0.0                    0.0   \n",
+       "SCYL3                                     0.0                    0.0   \n",
+       "C1orf112                                  0.0                    0.0   \n",
+       "FGR                                       2.0                    1.0   \n",
        "\n",
-       "         ACGAGGACATGAACCT_HD67 AAACGGGGTCTAGTCA_F02617 GCTTTCGGTGTCTAAC_SC85   \n",
-       "TSPAN6                     1.0                     2.0                   2.0  \\\n",
-       "DPM1                       0.0                     1.0                   0.0   \n",
-       "SCYL3                      0.0                     0.0                   0.0   \n",
-       "C1orf112                   0.0                     0.0                   0.0   \n",
-       "FGR                        0.0                     0.0                   0.0   \n",
+       "         ACATCAGTCCAAATGC-1-HCATisStab7747200   \n",
+       "TSPAN6                                    0.0  \\\n",
+       "DPM1                                      0.0   \n",
+       "SCYL3                                     0.0   \n",
+       "C1orf112                                  0.0   \n",
+       "FGR                                       0.0   \n",
        "\n",
-       "         CAACGGCGTGGAGGTT_SC143  ... TTGAACGCATCGACGC_F02524   \n",
-       "TSPAN6                      0.0  ...                     0.0  \\\n",
-       "DPM1                        0.0  ...                     0.0   \n",
-       "SCYL3                       0.0  ...                     0.0   \n",
-       "C1orf112                    0.0  ...                     0.0   \n",
-       "FGR                         0.0  ...                     0.0   \n",
+       "         GCAGTTAGTGCGAAAC-1-HCATisStab7747200   \n",
+       "TSPAN6                                    0.0  \\\n",
+       "DPM1                                      0.0   \n",
+       "SCYL3                                     0.0   \n",
+       "C1orf112                                  0.0   \n",
+       "FGR                                       0.0   \n",
        "\n",
-       "         GAATAAGAGAGCTATA-SC156 TAAACCGCATATGGTC_HD67 P2_2_AATCGGTGTGCTGTAT   \n",
-       "TSPAN6                      0.0                   0.0                   0.0  \\\n",
-       "DPM1                        0.0                   0.0                   0.0   \n",
-       "SCYL3                       0.0                   0.0                   0.0   \n",
-       "C1orf112                    0.0                   0.0                   0.0   \n",
-       "FGR                         0.0                   0.0                   0.0   \n",
+       "         TAGGCATCACAGACAG-1-HCATisStab7587202 7239213_GCAAACTAGATATGGT   \n",
+       "TSPAN6                                    0.0                      0.0  \\\n",
+       "DPM1                                      0.0                      0.0   \n",
+       "SCYL3                                     0.0                      0.0   \n",
+       "C1orf112                                  0.0                      0.0   \n",
+       "FGR                                       0.0                      0.0   \n",
        "\n",
-       "         CACAGTAAGGGTATCG-SC56 CGACTTCTCAGAAATG_F02526   \n",
-       "TSPAN6                     0.0                     0.0  \\\n",
-       "DPM1                       0.0                     0.0   \n",
-       "SCYL3                      0.0                     0.0   \n",
-       "C1orf112                   0.0                     0.0   \n",
-       "FGR                        0.0                     0.0   \n",
+       "         TAGAGCTAGAGACTTA-1-HCATisStab7747200 P2_1_TTAGGACAGAATGTGT  ...   \n",
+       "TSPAN6                                    0.0                   0.0  ...  \\\n",
+       "DPM1                                      0.0                   0.0  ...   \n",
+       "SCYL3                                     0.0                   0.0  ...   \n",
+       "C1orf112                                  0.0                   0.0  ...   \n",
+       "FGR                                       2.0                   0.0  ...   \n",
        "\n",
-       "         GGCTGGTTCAGAGACG-1-HCATisStab7587205 CACCTTGGTGTGACGA_F01394   \n",
-       "TSPAN6                                    0.0                     0.0  \\\n",
-       "DPM1                                      0.0                     0.0   \n",
-       "SCYL3                                     0.0                     0.0   \n",
-       "C1orf112                                  0.0                     0.0   \n",
-       "FGR                                       0.0                     0.0   \n",
+       "         P3_6_GTCGGGTTCTGCTGTC TTCTCCTTCCTTGGTC_SC10 P1_2_CATTATCCAGTGGGAT   \n",
+       "TSPAN6                     6.0                   2.0                   7.0  \\\n",
+       "DPM1                       2.0                   1.0                   5.0   \n",
+       "SCYL3                      1.0                   0.0                   1.0   \n",
+       "C1orf112                   0.0                   0.0                   0.0   \n",
+       "FGR                        0.0                   0.0                   0.0   \n",
        "\n",
-       "         CCCTCCTCAGCATGAG_F02611 CTTGGCTGTTCGTTGA_HD68  \n",
-       "TSPAN6                       0.0                   1.0  \n",
-       "DPM1                         0.0                   0.0  \n",
-       "SCYL3                        0.0                   0.0  \n",
-       "C1orf112                     0.0                   0.0  \n",
-       "FGR                          0.0                   0.0  \n",
+       "         ATTTCTGCATACAGCT_SC22 GAACATCTCTTGTTTG_SC22 CACCTTGCAGGGTACA_SC10   \n",
+       "TSPAN6                     2.0                   1.0                   3.0  \\\n",
+       "DPM1                       2.0                   1.0                   2.0   \n",
+       "SCYL3                      0.0                   0.0                   1.0   \n",
+       "C1orf112                   0.0                   0.0                   0.0   \n",
+       "FGR                        0.0                   0.0                   0.0   \n",
        "\n",
-       "[5 rows x 25112 columns]"
+       "         P2_7_GTGCATAAGAGCTGCA CATCGGGAGGCTAGCA_SC22 GCGACCACAGCGTTCG_SC24   \n",
+       "TSPAN6                     9.0                   3.0                   6.0  \\\n",
+       "DPM1                       8.0                   5.0                   4.0   \n",
+       "SCYL3                      2.0                   1.0                   0.0   \n",
+       "C1orf112                   0.0                   0.0                   0.0   \n",
+       "FGR                        1.0                   0.0                   1.0   \n",
+       "\n",
+       "         CATCAAGCAGTAAGCG_SC24  \n",
+       "TSPAN6                     9.0  \n",
+       "DPM1                       1.0  \n",
+       "SCYL3                      2.0  \n",
+       "C1orf112                   0.0  \n",
+       "FGR                        0.0  \n",
+       "\n",
+       "[5 rows x 2000 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,22 +376,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "id": "c3e29ce4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.T.iloc[:-1,:].to_csv(\"{}{}_counts.csv\".format(outpath, name))"
+    "df.T.iloc[:-1,:].to_csv(\"{}{}_{}cells_counts.csv\".format(outpath, name, 2*num_cells_group))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "id": "0347bc41",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"cell_type\"].to_csv(\"{}{}_meta.csv\".format(outpath, name))"
+    "df[\"cell_type\"].to_csv(\"{}{}_{}cells_meta.csv\".format(outpath, name, 2*num_cells_group))"
    ]
   },
   {
